# ConanTestLibary

./: .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.txt
.github/workflows/: anchore-syft.yml  sbom.yml
TestLibrary/: CMakeLists.txt
TestLibrary/include/: TestLibrary.h
TestLibrary/src/: TestLibrary.cpp
TestLibrary_Tests/: CMakeLists.txt  TestLibrary_Tests.cpp
